--- a/test.ipynb
+++ b/test.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20ce3f64bfa94a65bfc9705de9704420",
+       "model_id": "eb09e9e6d2f04ecaa9f21d73bb10860b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -24,28 +24,28 @@
      "output_type": "stream",
      "text": [
       "你好👋！我是人工智能助手 ChatGLM3-6B，很高兴见到你，欢迎问我任何问题。\n",
-      "晚上睡不着觉可能会导致很多其他的健康问题，所以保持良好的睡眠习惯非常重要。以下是一些可能有用的建议：\n",
+      "晚上睡不着时，你可以尝试以下方法：\n",
       "\n",
-      "1. 建立规律的睡眠时间表：每晚在相同的时间上床，并尽量在早上相同的时间起床，即使在周末也要遵循相同的时间表。\n",
+      "1. 保持冷静：尽量放松，不要焦虑或担心失眠问题。\n",
       "\n",
-      "2. 创造一个良好的睡眠环境：确保你的卧室安静、黑暗、凉爽、舒适，并且床垫和枕头能够支持你的身体。\n",
+      "2. 改变环境：调整房间的温度、光线、声音等，创造一个适宜睡眠的环境。\n",
       "\n",
-      "3. 避免在睡觉前进行剧烈的体力活动：剧烈的体力活动会使身体变得兴奋，导致难以入睡。\n",
+      "3. 活动身体：进行一些轻松的活动，如深呼吸、瑜伽、散步等，帮助身体放松，促进入眠。\n",
       "\n",
-      "4. 避免在睡觉前吃大量的食物或饮用咖啡因饮料：食物和咖啡因都会刺激大脑，导致难以入睡。\n",
+      "4. 限制刺激物：避免饮用咖啡、茶、可乐等含有咖啡因的饮料，避免 smoking、喝酒，这些会影响睡眠质量。\n",
       "\n",
-      "5. 尝试放松技巧：在睡觉前尝试一些放松技巧，如冥想、深呼吸或瑜伽等，这有助于缓解压力和焦虑。\n",
+      "5. 规律作息：尽量保持规律的作息时间，每天按时上床睡觉和起床，帮助身体建立良好的作息规律。\n",
       "\n",
-      "6. 避免在床上进行其他活动：床上应该是睡觉的地方，避免在床上看电视、工作或玩耍，这会破坏睡觉的习惯。\n",
+      "6. 放松身心：在睡前进行一些放松活动，如阅读、听音乐等，可以帮助缓解压力，促进入眠。\n",
       "\n",
-      "7. 如果长时间睡不着觉，可能需要考虑使用一些帮助入睡的方法，如使用睡眠辅助设备或咨询医生。\n",
-      "\n",
-      "希望这些建议能够帮助你改善睡眠质量。\n"
+      "如果长时间睡不着或睡眠质量不佳，建议咨询医生或专业心理咨询师，获得更好的帮助。\n"
      ]
     }
    ],
    "source": [
+    "from transformers import set_seed\n",
     "from transformers import AutoTokenizer, AutoModel\n",
+    "set_seed(42)\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"/share/lilin/chatglm3-6b\", trust_remote_code=True)\n",
     "model = AutoModel.from_pretrained(\"/share/lilin/chatglm3-6b\", trust_remote_code=True, device='cuda')\n",
     "model = model.eval()\n",
@@ -58,19 +58,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "抱歉，我还没有学习到关于这个话题的内容，无法提供相关信息。您可以选择其他问题，我将努力为您解答。\n"
+      "华为近期发布的新款手机包括:\n",
+      "\n",
+      "1. 华为Mate 40 Pro:该手机搭载了华为自主研发的麒麟9000芯片,拥有8GB/12GB RAM和128GB/256GB/512GB存储容量,配备了6.76英寸的OLED屏幕,分辨率为2772×1224像素,支持90Hz刷新率。此外,该手机还配备了5000mAh电池,支持快速充电和无线充电,并配备了多个摄像头,包括一个50MP主摄像头、一个20MP超广角镜头和一个12MP长焦镜头。\n",
+      "\n",
+      "2. 华为nova 8 Pro:该手机搭载了麒麟9000芯片,拥有8GB/12GB RAM和128GB/256GB存储容量,配备了6.57英寸的OLED屏幕,分辨率为2340×1080像素,支持90Hz刷新率。此外,该手机还配备了4500mAh电池,支持快速充电和无线充电,并配备了一个16MP前置摄像头和多个后置摄像头,包括一个64MP主摄像头、一个12MP超广角镜头和一个8MP长焦镜头。\n",
+      "\n",
+      "3. 华为P40 Pro:该手机搭载了麒麟9000芯片,拥有8GB/12GB RAM和128GB/256GB/512GB存储容量,配备了6.58英寸的OLED屏幕,分辨率为2772×1224像素,支持90Hz刷新率。此外,该手机还配备了4500mAh电池,支持快速充电和无线充电,并配备了一个40MP前置摄像头和多个后置摄像头,包括一个50MP主摄像头、一个12MP超广角镜头和一个10MP长焦镜头。\n",
+      "\n",
+      "以上是华为近期发布的一些新款手机,它们都搭载了麒麟9000芯片,并配备了多个摄像头和出色的屏幕。\n"
      ]
     }
    ],
    "source": [
-    "response, history = model.chat(tokenizer, \"李克强的去世有什么影响？\", history=[])\n",
+    "response, history = model.chat(tokenizer, \"请介绍一下华为最新的手机产品\", history=[], temperature=0.001)\n",
     "print(response)"
    ]
   },
@@ -104,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +123,7 @@
     "Here are some examples.\n",
     "\"\"\"\n",
     "\n",
-    "instruction_ch = \"\"\"使用多轮的<Thought, Action, Observation>的步骤范式来回答之后的问题。Thought进行推理分析为了完成任务你需要执行的操作，以及是否已经可以完成任务；Action提炼你需要执行的操作，他有三种模式：\n",
+    "instruction_ch = \"\"\"使用多轮的<Thought, Action, Observation>的步骤范式来回答之后的问题。Thought进行推理分析为了回答任务你需要执行的操作，以及是否已经可以回答任务；Action提炼你需要执行的操作，他有三种模式：\n",
     "(1) 搜索[关键词]：从网络上搜索关键词并且返回第一个搜索结果的内容；\n",
     "(2) 查找[关键词]：从网络上搜索关键词并且返回第一个搜索结果的内容；\n",
     "(3) 完成[最终回答]：生成最终的回答。\n",
@@ -169,13 +177,13 @@
     "\"\"\"\n",
     "# 注意：\n",
     "# 1. Thought中的格式：你的想法；\n",
-    "# 2. Action中的格式：一定是搜索, 查找, 完成之一加上[（对象）]；\n",
+    "# 2. Action中的格式：一定是搜索, 查找, 回答之一加上[（对象）]；\n",
     "prompt_ch = instruction_ch + example_ch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,16 +233,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def webthink_single_round_multi_agents(question=None, prompt=prompt_ch, to_print=True):\n",
+    "def webthink_single_round_multi_agents(question=None, inst_prompt=prompt_ch, to_print=True):\n",
     "    if to_print:\n",
     "        print(\"Question: \", question)\n",
     "    prompt = \"Question: \" + question\n",
     "    n_calls, n_badcalls = 0, 0\n",
-    "    inner_history = [{'role':'system', 'content':prompt_ch}]\n",
+    "    inner_history = [{'role':'system', 'content':inst_prompt}]\n",
     "    for i in range(3):\n",
     "        n_calls += 1\n",
     "        # thought_action = llm(prompt + f\"Thought {i}:\", stop=[f\"\\nObservation {i}:\"])\n",
@@ -259,13 +267,13 @@
     "        elif(\"查找\" in action):\n",
     "            obs, done = search_ddgs(action.strip().split(\"查找\")[1].strip(\" []（）()\"))\n",
     "        elif(\"完成\" in action):\n",
-    "            obs, done = finish(action.strip().split(\"完成\")[1].strip(\" []（）()\"))\n",
+    "            obs, done = finish(action.strip().split(\"回答\")[1].strip(\" []（）()\"))\n",
     "        else:\n",
     "            break\n",
     "\n",
     "        # obs, r, done, info = step(env, action[0].lower() + action[1:])\n",
     "        obs = obs.replace('\\\\n', '')\n",
-    "        inner_history.append({'role':'observation', 'content':obs, 'metadata':obs})\n",
+    "        inner_history.append({'role':'observation', 'content':obs})\n",
     "        # obs_prompt = f\"Observation: {obs}\\n\"\n",
     "        # prompt += step_str\n",
     "        # print(\"#\"*20, len(obs_prompt))\n",
@@ -294,33 +302,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Question:  介绍一下傅里叶变换\n",
+      "Question:  请介绍一下华为最新款的手机\n",
       "0 =============== LLM输出结果 ===============\n",
-      "Thought:  Thought: 为了回答关于傅里叶变换的问题，我需要先了解傅里叶变换是什么。通过查询，我可以找到相关的信息和解释。\n",
-      "Action: 搜索[傅里叶变换是什么]\n",
+      "Thought:  Thought: 华为最新款的手机可能是华为Mate 50。我将搜索有关华为Mate 50的信息。\n",
+      "Action: 搜索[华为Mate 50]\n",
       "========================================\n",
       "+++++++++++++++ ddgs搜索结果 +++++++++++++++\n",
-      "傅里叶变换 - 维基百科，自由的百科全书\n",
+      "HUAWEI Mate 50 - 华为官网\n",
       "++++++++++++++++++++++++++++++++++++++++\n",
-      "Observation: 傅里叶变换（法語： Transformation de Fourier ，英語： Fourier transform ，缩写：FT）是一种线性积分变换，用于函数（应用上称作「信号」）在时域和频域之间的变换。 因其基本思想首先由法国学者约瑟夫·傅里叶系统地提出，所以以其名字来命名以示纪念。. 傅里叶变换在物理学和工程学中有许多应用。\n",
+      "Observation: HUAWEI Mate 50 搭载全新华为 XMAGE 超光变影像系统，超大光圈，夜景眼前一亮；物理光圈十挡可调，亚毫米级人像虚化。 XMAGE 影像风格献上真实、沁润、通透、有呼吸感的影像。 首款支持北斗卫星消息的华为手机，地面无信号时仍能发送卫星消息，安心畅连。 华为昆仑玻璃，坚若磐石；鸿蒙操作系统 3.0，持久流畅，个性高效，隐私安全再升级。 HUAWEI Mate 50 - 华为官网 HUAWEI Mate 50 我们使用cookie来确保您的高速浏览体验。 继续浏览本站，即表示您同意我们使用cookie。 详情 消费者业务网站 关闭 个人用户 手机，PC和平板，穿戴设备等个人及家用产品 集团网站 公司信息，社会责任，新闻，展会活动，行业洞察等等 企业用户\n",
       "\n",
       "1 =============== LLM输出结果 ===============\n",
-      "Thought:  Thought: 经过查询，我已经了解了傅里叶变换的基本概念。现在，我可以回答您的问题了。\n",
-      "Action: 回答[傅里叶变换是什么]\n",
+      "Thought:  Thought: 华为Mate 50 具有强大的影像系统和鸿蒙操作系统，是一款非常先进的手机。\n",
       "========================================\n",
-      "傅里叶变换是一种线性积分变换，用于将函数（在应用上被称为信号）从时域转换到频域。它是由法国学者约瑟夫·傅里叶系统地提出的，并以其名字命名以示纪念。傅里叶变换在物理学和工程学中有许多应用，例如信号处理、图像处理、通信系统、量子力学等领域。它可以将一个时间序列转换为一个频率序列，使我们能够分析信号的频率成分。在音频处理中，傅里叶变换可以将音频信号转换为频率声音，以便更好地理解音频信号中的频率成分。在图像处理中，傅里叶变换可以用于图像的频域分析，以便更好地理解图像中的频率信息。\n"
+      "回答格式出错1 Thought: 华为Mate 50 具有强大的影像系统和鸿蒙操作系统，是一款非常先进的手机。\n",
+      "+++++++++++++++ ddgs搜索结果 +++++++++++++++\n",
+      "华为Mate50的1个致命缺点和6个值得购买的理由总结 - 知乎\n",
+      "++++++++++++++++++++++++++++++++++++++++\n",
+      "Observation: 而\"HUAWEI Mate 50\"采用的全新\"昆仑玻璃\"可以大幅提升屏幕的耐摔能力，降低了屏幕碎裂的几率，一定程度就避免了昂贵的维修费。 是不是很值？ 所以我把它作为第二个购买理由。 但要注意搭配昆仑玻璃的配置比普通款贵200，这就要看您觉得用200元换一个更耐摔的屏幕值不值了。 购买的理由31%电量应急模式。 出门最怕什么，不是没带钱包，而是没带手机或者手机没电。 这个\"应急模式\"可以在电池电量还剩1%的时候实现12分钟通话、10次显示二维码或者4次扫码。 不用4次，只要还能有1次扫码的机会你就可以找个共享充电宝给手机充电。 在紧急时刻，这个功能就会体现出它的价值。 没错，又是一个平时用不到的功能，但关键时刻却能发挥极大的用处。\n",
+      "\n",
+      "2 =============== LLM输出结果 ===============\n",
+      "Thought:  Thought: 华为Mate 50的“昆仑玻璃”和“应急模式”都是很出色的特性，提高了手机的使用体验和实用性。\n",
+      "========================================\n",
+      "回答格式出错1 Thought: 华为Mate 50的“昆仑玻璃”和“应急模式”都是很出色的特性，提高了手机的使用体验和实用性。\n",
+      "华为最新款的手机是华为Mate 40 Pro。它采用了6.76英寸的OLED环绕屏，分辨率高达2772×1224像素，支持HDR10+和120Hz刷新率。该屏幕还具有90Hz的触控采样率，操作流畅度非常高。\n",
+      "\n",
+      "华为Mate 40 Pro搭载了麒麟9000芯片，这是华为自家研发的一款5G SoC芯片，性能非常强大。该芯片还支持5G网络，使得手机在网络速度和延迟方面表现出色。\n",
+      "\n",
+      "相机方面，华为Mate 40 Pro配备了四个摄像头，包括一颗5000万像素的主摄像头、一颗2000万像素的超广角摄像头、一颗1200万像素的潜望式长焦镜头和一颗1200万像素的ToF镜头。这些摄像头可以实现2倍光学变焦、10倍数码变焦以及20倍数码变焦，支持AI智能识景和AI智能拍照，可以自动识别场景并调整参数以获得更好的拍照效果。\n",
+      "\n",
+      "此外，华为Mate 40 Pro还具有5000毫安时的大电池，支持66W有线快充和50W无线快充，可以保证长时间的使用。该手机还具有IP68级防水防尘功能，可以在一些恶劣的环境下正常使用。\n",
+      "\n",
+      "总之，华为Mate 40 Pro是一款功能强大、性能卓越的旗舰手机，适合那些需要强大性能和高清摄像的用户。\n"
      ]
     }
    ],
    "source": [
-    "query = \"介绍一下傅里叶变换\"\n",
+    "query = \"请介绍一下华为最新款的手机\"\n",
     "# \n",
     "# response, history = model.chat(tokenizer, prompt_ch + query + \"\\nThought 1: \", history=history, temperature=0.001)\n",
     "r = webthink_single_round_multi_agents(query)\n",
@@ -329,20 +354,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def webthink_multi_rounds_single_agent(question, history, to_print=True):\n",
+    "def webthink_multi_rounds_single_agent(question, history, inst_prompt=prompt_ch, to_print=True):\n",
     "    if to_print:\n",
     "        print(\"Question: \", question)\n",
-    "    prompt = question\n",
+    "    prompt = \"Question: \" + question\n",
     "    # n_calls, n_badcalls = 0, 0\n",
     "    obs = \"\"\n",
-    "    \n",
+    "    inner_history = [{'role':'system', 'content':inst_prompt}] + history\n",
     "    # n_calls += 1\n",
     "    # thought_action = llm(prompt + f\"Thought {i}:\", stop=[f\"\\nObservation {i}:\"])\n",
-    "    response, inner_history = model.chat(tokenizer, prompt + \"Thought: \", history=history, temperature=0.001)\n",
+    "    response, inner_history = model.chat(tokenizer, prompt + \"Thought: \", history=inner_history, temperature=0.001)\n",
     "    print(\"=\"*15, \"LLM输出结果\", \"=\"*15)\n",
     "    print(f\"Thought: \", response)\n",
     "    print(\"=\"*40)\n",
@@ -362,8 +387,6 @@
     "        obs, done = search_ddgs(action.strip().split(\"搜索\")[1].strip(\" []（）()\"))\n",
     "    elif(\"查找\" in action):\n",
     "        obs, done = search_ddgs(action.strip().split(\"查找\")[1].strip(\" []（）()\"))\n",
-    "    elif(\"完成\" in action):\n",
-    "        obs, done = finish(action.strip().split(\"完成\")[1].strip(\" []（）()\"))\n",
     "    else:\n",
     "        r, h  = model.chat(tokenizer, question, history=history, temperature=0.001)\n",
     "        return r, h\n",
@@ -376,10 +399,10 @@
     "    # prompt += step_str\n",
     "    # print(\"#\"*20, len(prompt))\n",
     "    if to_print:\n",
-    "        print(step_str)\n",
+    "        print(f\"Observation: {obs}\\n\")\n",
     "    if done:\n",
+    "        print(\"DDOONNEE\")\n",
     "        r = obs\n",
-    "    print(\"obs\", obs)\n",
     "\n",
     "    _, h_raw = model.chat(tokenizer, question, history=[], temperature=0.001)\n",
     "    h_raw[0]['content'] = \"只使用llm思考这个问题的答案是：\"\n",
@@ -397,7 +420,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1]\n",
+    "a.insert(0,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -406,88 +439,61 @@
      "text": [
       "Question:  你好\n",
       "=============== LLM输出结果 ===============\n",
-      "Thought:  你好，请问有什么我可以帮助你的吗？\n",
+      "Thought:  Thought: 你好，请问有什么我可以帮助你的吗？\n",
       "========================================\n",
-      "回答格式出错1 你好，请问有什么我可以帮助你的吗？\n",
-      "Thought 0: 你好，请问有什么我可以帮助你的吗？\n",
-      "Action 0: 抱歉，我需要一个明确的提问或者任务来完成Action。\n",
-      "Observation 0: Action。\n",
-      "\n",
-      "obs Action。\n",
-      "0 ==============================\n",
+      "回答格式出错1 Thought: 你好，请问有什么我可以帮助你的吗？\n",
+      "0 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
       "question: 你好\n",
-      "response: 你好👋！我是人工智能助手 ChatGLM3-6B，很高兴见到你，欢迎问我任何问题。\n",
+      "response: Thought: 你好，请问有什么我可以帮助你的吗？\n",
       "\n",
-      "Question:  请介绍一下华为最新款的手机\n",
+      "Question:  请介绍一下华为最新款手机\n",
       "=============== LLM输出结果 ===============\n",
-      "Thought:  抱歉，由于我是一个语言模型，我无法获取到华为最新款手机的信息。我的知识截止于 2023，因此我无法提供关于 2023 年之后的信息。建议您查看华为官方网站或者相关新闻报道来获取最新信息。\n",
+      "Thought:  Thought: 很抱歉，由于我是一个语言模型，我无法获取到2023年之后的信息，因此我无法为您提供华为最新款手机的信息。\n",
       "========================================\n",
-      "回答格式出错1 抱歉，由于我是一个语言模型，我无法获取到华为最新款手机的信息。我的知识截止于 2023，因此我无法提供关于 2023 年之后的信息。建议您查看华为官方网站或者相关新闻报道来获取最新信息。\n",
-      "1 ==============================\n",
-      "question: 请介绍一下华为最新款的手机\n",
-      "response: 抱歉，由于我是一个语言模型，我无法获取到华为最新款手机的信息。我的知识截止于 2023，因此我无法提供关于 2023 年之后的信息。建议您查看华为官方网站或者相关新闻报道来获取最新信息。\n",
+      "回答格式出错1 Thought: 很抱歉，由于我是一个语言模型，我无法获取到2023年之后的信息，因此我无法为您提供华为最新款手机的信息。\n",
+      "1 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+      "question: 请介绍一下华为最新款手机\n",
+      "response: Thought: 很抱歉，由于我是一个语言模型，我无法获取到2023年之后的信息，因此我无法为您提供华为最新款手机的信息。\n",
+      "Action: \n",
+      "华为最新款手机是华为Mate 50，它于2022年9月20日正式发布。它采用了6.77英寸的OLED环绕屏，分辨率为2772 x 1224像素，刷新率高达90Hz。它搭载了华为自主研发的麒麟9000处理器，配备了一套由5000万像素主摄、2000万像素超广角和1200万像素长焦组成的四摄像头系统。此外，它还支持5G网络和华为鸿蒙操作系统。\n",
       "\n",
-      "Question:  你可以使用搜索引擎\n",
+      "Question:  \n",
       "=============== LLM输出结果 ===============\n",
-      "Thought:  好的，我可以使用搜索引擎来获取华为最新款手机的信息。\n",
-      "Action: 搜索[华为最新款手机]\n",
+      "Thought:  Thought: 您好，请问有什么我可以帮助您的吗？\n",
       "========================================\n",
-      "+++++++++++++++ ddgs搜索结果 +++++++++++++++\n",
-      "华为手机 - 华为官网 - Huawei\n",
-      "++++++++++++++++++++++++++++++++++++++++\n",
-      "Thought 2: 好的，我可以使用搜索引擎来获取华为最新款手机的信息。\n",
-      "Action 2:  搜索[华为最新款手机]\n",
-      "Observation 2: HUAWEI Mate 60 Pro 了解更多 购买 最新 HUAWEI Mate 60 Pro+ 双卫星通信 超可靠玄武架构 了解更多 购买 最新 HUAWEI Mate X5 超轻薄全能折叠 玄武钢化昆仑玻璃 ￥12999 起 了解更多 购买 最新 HUAWEI Mate 60 RS 非凡大师 双卫星通信 玄武钢化昆仑玻璃 了解更多 购买 最新 HUAWEI Mate 60 双向北斗卫星消息 超可靠玄武架构 了解更多 购买 P 系列 超可靠昆仑玻璃 超聚光夜视长焦 双向北斗卫星消息，超强灵犀通信\n",
+      "回答格式出错1 Thought: 您好，请问有什么我可以帮助您的吗？\n",
+      "2 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+      "question: \n",
+      "response: 您好，有什么我可以帮助您的吗？\n",
       "\n",
-      "obs HUAWEI Mate 60 Pro 了解更多 购买 最新 HUAWEI Mate 60 Pro+ 双卫星通信 超可靠玄武架构 了解更多 购买 最新 HUAWEI Mate X5 超轻薄全能折叠 玄武钢化昆仑玻璃 ￥12999 起 了解更多 购买 最新 HUAWEI Mate 60 RS 非凡大师 双卫星通信 玄武钢化昆仑玻璃 了解更多 购买 最新 HUAWEI Mate 60 双向北斗卫星消息 超可靠玄武架构 了解更多 购买 P 系列 超可靠昆仑玻璃 超聚光夜视长焦 双向北斗卫星消息，超强灵犀通信\n",
-      "2 ==============================\n",
-      "question: 你可以使用搜索引擎\n",
-      "response: 作为人工智能助手，我可以使用搜索引擎来获取信息。\n",
-      "\n",
-      "Question:  可以给我提供一些购买渠道吗\n",
+      "Question:  \n",
       "=============== LLM输出结果 ===============\n",
-      "Thought:  当然可以，请问您想购买哪款华为手机？我可以为您提供官方的购买渠道。\n",
+      "Thought:  Thought: 您好，请问有什么我可以帮助您的吗？\n",
       "========================================\n",
-      "回答格式出错1 当然可以，请问您想购买哪款华为手机？我可以为您提供官方的购买渠道。\n",
-      "3 ==============================\n",
-      "question: 可以给我提供一些购买渠道吗\n",
-      "response: 当然可以。以下是一些官方的购买渠道：\n",
+      "回答格式出错1 Thought: 您好，请问有什么我可以帮助您的吗？\n",
+      "3 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+      "question: \n",
+      "response: 您好，请问有什么我可以帮助您的吗？\n",
       "\n",
-      "1. 华为官方网站：您可以访问华为官方网站（https://www.huawei.com/）来查看各种华为手机型号，并选择您想购买的产品。\n",
-      "\n",
-      "2. 华为授权经销商：您可以联系华为授权经销商，了解最新款手机的销售情况，并购买您喜欢的产品。\n",
-      "\n",
-      "3. 电商平台：您还可以在各大电商平台（如华为商城、天猫、京东等）上购买华为手机。\n",
-      "\n",
-      "请根据您的需求和喜好选择合适的购买渠道。如果您需要进一步的帮助，请随时告诉我。\n",
-      "\n",
-      "Question:  使用搜索引擎看看？\n",
+      "Question:  \n",
       "=============== LLM输出结果 ===============\n",
-      "Thought:  好的，我可以使用搜索引擎来查找购买华为手机的渠道。\n",
-      "Action: 搜索[华为手机购买渠道]\n",
+      "Thought:  Thought: 您好，请问有什么我可以帮助您的吗？\n",
       "========================================\n",
-      "+++++++++++++++ ddgs搜索结果 +++++++++++++++\n",
-      "买华为手机在哪个平台买合适? - 知乎\n",
-      "++++++++++++++++++++++++++++++++++++++++\n",
-      "Thought 4: 好的，我可以使用搜索引擎来查找购买华为手机的渠道。\n",
-      "Action 4:  搜索[华为手机购买渠道]\n",
-      "Observation 4: 下面是京东自营华为官方旗舰店的购买卡片，可以直接点击进去选购： 广告 华为 HUAWEI Mate 40E 麒麟990E 5G SoC芯片 超感知徕 京东 ¥4599.00 去购买 广告 华为 HUAWEI P40 麒麟990 5G SoC芯片 5000万超感知徕 京东 ¥4988.00\n",
-      "\n",
-      "obs 下面是京东自营华为官方旗舰店的购买卡片，可以直接点击进去选购： 广告 华为 HUAWEI Mate 40E 麒麟990E 5G SoC芯片 超感知徕 京东 ¥4599.00 去购买 广告 华为 HUAWEI P40 麒麟990 5G SoC芯片 5000万超感知徕 京东 ¥4988.00\n",
-      "4 ==============================\n",
-      "question: 使用搜索引擎看看？\n",
-      "response: 好的，我可以使用搜索引擎来查找购买华为手机的渠道。\n",
-      "Action: 搜索[华为手机购买渠道]\n",
+      "回答格式出错1 Thought: 您好，请问有什么我可以帮助您的吗？\n",
+      "4 @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
+      "question: \n",
+      "response: 您好，请问有什么我可以帮助您的吗？\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "h = [{'role':'system', 'content':prompt_ch}]\n",
+    "# h = [{'role':'system', 'content':prompt_ch}]\n",
+    "h = []\n",
     "for i in range(5):\n",
     "    q = input()\n",
     "    r, h = webthink_multi_rounds_single_agent(q, h)\n",
-    "    print(i, \"=\"*30)\n",
+    "    print(i, \"@\"*30)\n",
     "    print(f\"question: {q}\\nresponse: {r}\\n\")"
    ]
   },
